[TM-2876] Remove srp report export endpoint.
