# resources/docs/swagger-v2.yml
@@ -3181,14 +3181,3 @@ paths:
           schema:
             type: object
       operationId: get-v2-disturbance-reports-export
-  /v2/srp-reports/export:
-    get:
-      summary: Export annual socio economic restoration reports
-      tags:
-        - V2 annual socio economic restoration reports
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: object
-      operationId: get-v2-annual-socio-economic-restoration-reports-export
